[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Елена Смирнова <nomsgva@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
datetime = "^5.1"
apscheduler = "^3.10.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
